fix: fixed an issue on the navbar where the logo was not showing up

--- a/src/layout/Authentication/components/Signup/Signup.module.scss
+++ b/src/layout/Authentication/components/Signup/Signup.module.scss
@@ -6,6 +6,12 @@
   flex-direction: column;
   align-items: flex-start;
 
+  & .inputsContainer {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+  }
+
   & img {
     width: 13.5rem;
     flex-shrink: 0;
@@ -44,10 +50,9 @@
     line-height: 150%; /* 18px */
   }
 
-  & button {
-    margin-top: 2.4rem;
-    flex: 1 1 auto;
+  & .submitButton {
     align-self: stretch;
+    margin-top: 2.4rem;
     text-align: center;
     font-size: 1.6rem;
     font-style: normal;
@@ -64,6 +69,12 @@
     & button {
       margin-top: 0;
       padding: 0;
+      text-align: left;
+      text-align: center;
+      font-size: 1.6rem;
+      font-style: normal;
+      font-weight: 600;
+      line-height: 150%; /* 24px */
     }
   }
   & .pButtonCombo {
